index.html with meta info

--- a/www/index.html
+++ b/www/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-
-	
-	
-	
-	
-	
+		<title>EntStore</title><!-- Browser tab title. -->
+		<meta charset="UTF-8"><!-- Tell browser encoding of the document -->
+		<meta name="description" content="The Ents of the world!"><!-- For search engines. -->
+		<meta name="keywords" content="ent, ents, forrest"><!-- For search engines. -->
+		<meta name="author" content="marta_prosniak">
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 	</head>
-	
 	<body>
 	
 	
