--- a/www/index.html
+++ b/www/index.html
@@ -6,22 +6,27 @@
 		<meta name="description" content="The Ents of the world!"><!-- For search engines. -->
 		<meta name="keywords" content="ent, ents, forrest"><!-- For search engines. -->
 		<meta name="author" content="marta_prosniak">
+		<link rel="stylesheet" href="style/style.css"/>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 	</head>
 	<body>
-	
-	
-	
-	
+		<header>
+			<h1>EntStore<br>The Ents of the world!</h1>
+		</header>
+		<nav>
+			<ul>
+				<li><a href="index.html">home</a></li>
+				<li><a href="list.html">products</a></li>
+				<li><a href="contact.html">contact</a></li>
+			</ul>
+		</nav>
+		<section>
+			This will be main part of the site!
+		</section>
+		<footer>
+			No ents were harmed during making this website<br>&copy; Copyright 2019
+		</footer>
 
-	
-	
-	
-	
-	
-	
-	
-	
 	</body>
 
 </html>
