--- a/www/index.html
+++ b/www/index.html
@@ -24,7 +24,7 @@
 			This will be main part of the site!
 		</section>
 		<footer>
-			No ents were harmed during making this website<br>&copy; Copyright 2019
+			No ents were harmed during creating this website<br>&copy; Copyright 2019
 		</footer>
 
 	</body>
