--- a/www/list.html
+++ b/www/list.html
@@ -24,7 +24,7 @@
     Here will be our ents!
 </section>
 <footer>
-    No ents were harmed during making this website<br>&copy; Copyright 2019
+    No ents were harmed during creating this website<br>&copy; Copyright 2019
 </footer>
 
 </body>
