--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
 		<meta name="author" content="marta_prosniak">
 		<link rel="stylesheet" href="css/style.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
 		<link rel="stylesheet" href="css/fontello.css" type="text/css" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 	</head>
