css implemented to all files

--- a/www/contact.html
+++ b/www/contact.html
@@ -1,32 +1,38 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-    <title>EntStore</title><!-- Browser tab title. -->
-    <meta charset="UTF-8"><!-- Tell browser encoding of the document -->
-    <meta name="description" content="The Ents of the world!"><!-- For search engines. -->
-    <meta name="keywords" content="ent, ents, forrest"><!-- For search engines. -->
-    <meta name="author" content="marta_prosniak">
-    <link rel="stylesheet" href="style/style.css"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-</head>
-<body>
-<header>
-    <h1>EntStore<br>The Ents of the world!</h1>
-</header>
-<nav>
-    <ul>
-        <li><a href="index.html">home</a></li>
-        <li><a href="list.html">products</a></li>
-        <li><a href="contact.html">contact</a></li>
-    </ul>
-</nav>
-<section>
-    Here will be contact form!
-</section>
-<footer>
-    No ents were harmed during creating this website<br>&copy; Copyright 2019
-</footer>
-
-</body>
-
+	<head>
+		<title>EntStore</title><!-- Browser tab title. -->
+		<meta charset="UTF-8"><!-- Tell browser encoding of the document -->
+		<meta name="description" content="The Ents of the world!"><!-- For search engines. -->
+		<meta name="keywords" content="ent, ents, forrest"><!-- For search engines. -->
+		<meta name="author" content="marta_prosniak">
+		<link rel="stylesheet" href="css/style.css"/>
+		<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
+		<link rel="stylesheet" href="css/fontello.css" type="text/css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
+	</head>
+	<body>
+		<div id="container">
+			<header>
+				<h1>
+					<i class="icon-tree-2"></i>EntStore<i class="icon-tree-2"></i><br>
+					The Ents of the world!
+					</h1>
+			</header>
+			<nav>
+				<ul>
+					<li><a href="index.html">home</a></li>
+					<li><a href="list.html">products</a></li>
+					<li><a href="contact.html">contact</a></li>
+				</ul>
+			</nav>
+			<section>
+				This will be contact form!
+			</section>
+			<footer>
+				No ents were harmed during creating this website<br>&copy; Copyright 2019
+			</footer>
+		</div>
+	</body>
 </html>
