--- a/www/contact.html
+++ b/www/contact.html
@@ -13,7 +13,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
 	</head>
 	<body>
-		<div id="container">
+		<div id="solid_background">
 			<header>
 				<h1>
 					<i class="icon-tree-2"></i>EntStore<i class="icon-tree-2"></i><br>
