--- a/www/contact.html
+++ b/www/contact.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="The Ents of the world!"><!-- For search engines. -->
 		<meta name="keywords" content="ent, ents, forrest"><!-- For search engines. -->
 		<meta name="author" content="marta_prosniak">
+		<meta http-equiv="X-Ua-Compatible" content="IE=edge,chrome=1">
 		<link rel="stylesheet" href="css/style.css"/>
 		<link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
@@ -15,10 +16,12 @@
 	<body>
 		<div id="solid_background">
 			<header>
+				<a href="index.html">
 				<h1>
 					<i class="icon-tree-2"></i>EntStore<i class="icon-tree-2"></i><br>
 					The Ents of the world!
 					</h1>
+				<a href="index.html">
 			</header>
 			<nav>
 				<ul>
