--- a/www/list.html
+++ b/www/list.html
@@ -31,7 +31,7 @@
 					<li><a href="contact.html">contact</a></li>
 				</ul>
 			</nav>
-			<section id="ents">
+			<section id="main">
 			</section>
 			<footer>
 				No ents were harmed during creating this website<br>&copy; Copyright 2019
@@ -40,7 +40,7 @@
 	</body>
 	<script>
 		$(window).on("load", function() {
-		populateEnts('ents');
+		populateEnts('main');
 		});
 	</script>
 </html>
