get form data in progress

--- a/www/contact_form_sent.html
+++ b/www/contact_form_sent.html
@@ -38,9 +38,9 @@
 			</footer>
 		</div>
 	</body>
-	<!---<script>
+	<script>
 		$(window).on("load", function() {
-		createForm('main');
+		getFormInfo('main');
 		});
-	</script>-->
+	</script>
 </html>
