some giles femoved

--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,10 @@
 					<li><a href="contact.html">contact</a></li>
 				</ul>
 			</nav>
-			<section>
-				This will be main part of the site!
+			<section id="main">
+				<div id="banner">
+					<img src="img/trees.jpg" alt="EntStore" height="360" width="560">
+				</div>>
 			</section>
 			
 			<footer>
