--- a/www/contact_form_sent.html
+++ b/www/contact_form_sent.html
@@ -34,7 +34,7 @@
 			<section id = "main">
 			</section>
 			<footer>
-				No ents were harmed during creating this website<br>&copy; Copyright 2019
+				No ents were harmed during creating this website<br>&copy; Copyright 2019 Marta Prośniak
 			</footer>
 		</div>
 	</body>
