--- a/www/index.html
+++ b/www/index.html
@@ -35,7 +35,7 @@
 			</section>
 			
 			<footer>
-				No ents were harmed during creating this website<br>&copy; Copyright 2019
+				No ents were harmed during creating this website<br>&copy; Copyright 2019 Marta Prośniak
 			</footer>
 		</div>
 	</body>
