Small changes in css, final commit

--- a/www/list.html
+++ b/www/list.html
@@ -12,7 +12,10 @@
 		<link href="https://fonts.googleapis.com/css?family=Arima+Madurai" rel="stylesheet">
 		<link rel="stylesheet" href="css/fontello.css" type="text/css" />
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.js"></script>
-		<script src="js/ents.js"></script>
+		<script src="js/ents.js"></script>3
+
+
+		,,,,,,,
 	</head>
 	<body>
 		<div id="solid_background">
